cmss/main/default/objects/AssetDIMA__c/AssetDIMA__c.object-meta.xml
<CustomObject>
    <description>Info o DIMA akci, ve které byla smlouva sjednána</description>
    <label>Asset DIMA</label>
    <nameField>
        <label>AssetDIMA Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Asset DIMAs</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>