cmss/main/default/objects/AssetDIMA__c/fields/Asset__c.field-meta.xml
<CustomField>
    <fullName>Asset__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Odkaz na smlouvu</description>
    <label>Asset</label>
    <referenceTo>Asset</referenceTo>
    <relationshipName>Asset_Changes</relationshipName>
    <type>Lookup</type>
</CustomField>