cmss/main/default/objects/AssetDIMA__c/fields/BenefitValue__c.field-meta.xml
<CustomField>
    <fullName>BenefitValue__c</fullName>
    <description>Hodnota výhody</description>
    <label>Benefit Value</label>
    <precision>14</precision>
    <scale>4</scale>
    <type>Currency</type>
</CustomField>