cmss/main/default/objects/AssetDIMA__c/fields/ChangeCreationDate__c.field-meta.xml
<CustomField>
    <fullName>ChangeCreationDate__c</fullName>
    <description>Datum pořízení změny</description>
    <label>Change Creation Date</label>
    <type>DateTime</type>
</CustomField>