cmss/main/default/objects/AssetDIMA__c/fields/ContractLimitations__c.field-meta.xml
<CustomField>
    <fullName>ContractLimitations__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Omezení smlouvy</description>
    <label>Contract Limitations</label>
    <type>Checkbox</type>
</CustomField>