cmss/main/default/objects/AssetDIMA__c/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <description>Popis</description>
    <label>Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>