cmss/main/default/objects/AssetDIMA__c/fields/DimaCode__c.field-meta.xml
<CustomField>
    <fullName>DimaCode__c</fullName>
    <description>Kód DIMA</description>
    <label>Dima Code</label>
    <length>20</length>
    <type>Text</type>
</CustomField>