cmss/main/default/objects/AssetDIMA__c/fields/DimaName__c.field-meta.xml
<CustomField>
    <fullName>DimaName__c</fullName>
    <description>Název DIMA</description>
    <label>Dima Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>