cmss/main/default/objects/AssetDIMA__c/fields/NewContractConditions__c.field-meta.xml
<CustomField>
    <fullName>NewContractConditions__c</fullName>
    <description>Nové VOP</description>
    <label>New Contract Conditions</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>